--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "child-process-promise": "^2.2.1",
+    "dotenv": "^5.0.1",
     "easy-zip": "0.0.4",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
@@ -34,5 +35,6 @@
     "path": "^0.12.7",
     "rimraf": "^2.6.2",
     "sequelize": "^4.37.7"
-  }
+  },
+  "devDependencies": {}
 }
